<resources>
    <string name="app_name">ClubHouseApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_group_menu">GroupMenuActivity</string>

    <!-- Strings related to CreateAccount -->
    <string name="prompt_bio">Bio</string>
    <string name="create">Create</string>

    <!-- Strings related to UserMenu -->
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="view_groups">View Groups</string>
    <string name="view_profile">View Profile</string>
    <string name="view_calendar">View Calendar</string>

    <!-- Strings related to UserProfile -->
    <string name="user_icon">User Icon</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_user">Edit User</string>
    <string name="user_enrolled_groups">This user is a member of the following groups:</string>

    <!-- Strings related to EditUserProfile -->
    <string name="save">Save</string>

    <!-- Strings related to GroupMenu -->
    <string name="view_members">View Members</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="view_resouces">View Resources</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="group_icon">Group Icon</string>

    <!--Strings related to ViewGroups -->
    <string name="bookmarked_groups">Your bookmarked clubs:</string>
    <string name="enrolled_groups">Clubs you are a part of:</string>
    <string name="delete_group">Delete a group</string>
    <string name="title_activity_event_creation">EventCreationActivity</string>

    <!--Strings related to ViewUsers -->
    <string name="users_in_group">Users who are a part of this group:</string>

    <!--Strings related to CreateGroup -->
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description</string>
    <string name="action_create_group">Create Group</string>

    <!--Strings related to DeleteGroup -->
    <string name="managed_groups">Groups you manage: </string>

    <!--Strings related to Resources -->
    <string name="resources_groups">Group Resources: </string>
    <string name="upload_resources">Upload Resources: </string>
    <string name="download_resources">Download Resources:</string>

</resources>
