<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softwareengineering.clubhouseapp.GroupMenuActivity">

    <Button
        android:id="@+id/view_members_button"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/view_members"
        android:onClick="onClickViewMembers"/>

    <Button
        android:id="@+id/join_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_meeting"
        android:layout_column="3"
        android:layout_row="5"
        android:onClick="onClickJoinMeeting"/>

    <Button
        android:id="@+id/view_calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/view_calendar"
        android:onClick="onClickViewCalendar"/>

    <Button
        android:id="@+id/view_resources_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/view_resouces"
        android:onClick="onClickViewResources"/>

    <Button
        android:id="@+id/join_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_meeting"
        android:layout_column="1"
        android:layout_row="5"
        android:onClick="onClickJoinMeeting"/>


</GridLayout>
